Add scss styles

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,4 +1,7 @@
 // partial files are named starting with _
+* {
+    box-sizing: border-box;
+}
 
 html {
     // change 1rem from 16 to 10px so they're easier to calculate
@@ -6,8 +9,10 @@ html {
 }
 
 body {
+    color: $dark-grey;
     font-family: Helvetica, Arial, sans-serif;
     font-size: $m-size;
+    line-height: 1.6;
 }
 
 button {
