--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,3 +1,14 @@
+// Colors
+$light-grey: #f7f7f7;
+$grey: #666;
+$dark-grey: #333;
+$bright-blue: #1c88bf;
+$dark-blue: #364051;
+
+// Font Sizes
+$font-size-small: 1.4rem;
+$font-size-large: 1.8rem;
+
 // Spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
